@@ -1,85 +1,67 @@
 package com.backend.category.service;
 
 import com.backend.category.dto.request.CategoryCreateRequest;
+import com.backend.category.dto.request.CategoryUpdateRequest;
 import com.backend.category.dto.response.CategoryResponse;
 import com.backend.category.entity.Category;
-import com.backend.category.exception.CategoryAlreadyExistsException;
-import com.backend.category.exception.CategoryNotFoundException;
 import com.backend.category.repository.CategoryRepository;
-import com.backend.category.service.CategoryService;
+
+import lombok.RequiredArgsConstructor;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional
 public class CategoryServiceImpl implements CategoryService {
 
     private final CategoryRepository categoryRepository;
 
-    public CategoryServiceImpl(CategoryRepository categoryRepository) {
-        this.categoryRepository = categoryRepository;
-    }
 
     // ============================================================
     // CREATE CATEGORY
     // ============================================================
 
     @Override
-    public CategoryResponse createCategory(CategoryCreateRequest request) {
+    public CategoryResponse createCategory(
+            CategoryCreateRequest request
+    ) {
 
-        // 1. Check whether category already exists
-
-        boolean categoryExists =
-                categoryRepository.existsByNameIgnoreCase(request.getName());
-
-        if (categoryExists) {
-
-            throw new CategoryAlreadyExistsException(
+        if (categoryRepository.existsByNameIgnoreCase(request.getName())) {
+            throw new RuntimeException(
                     "Category already exists with name: "
                             + request.getName()
             );
         }
 
-        // 2. Create Category entity
-
-        Category category = new Category();
-
-        category.setName(request.getName());
-
-        category.setDescription(request.getDescription());
-
-        category.setActive(true);
-
-        // 3. Save category
+        Category category = Category.builder()
+                .name(request.getName())
+                .description(request.getDescription())
+                .active(true)
+                .build();
 
         Category savedCategory =
                 categoryRepository.save(category);
 
-        // 4. Convert entity to response
-
-        return convertToResponse(savedCategory);
+        return mapToResponse(savedCategory);
     }
 
 
     // ============================================================
-    // GET ALL CATEGORIES
+    // GET ALL ACTIVE CATEGORIES
     // ============================================================
 
     @Override
+    @Transactional(readOnly = true)
     public List<CategoryResponse> getAllCategories() {
 
-        // 1. Get all categories
-
-        List<Category> categories =
-                categoryRepository.findAll();
-
-        // 2. Convert entities to response objects
-
-        return categories.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+        return categoryRepository.findByActiveTrue()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
 
@@ -88,21 +70,20 @@ public class CategoryServiceImpl implements CategoryService {
     // ============================================================
 
     @Override
-    public CategoryResponse getCategoryById(Long id) {
-
-        // 1. Find category
+    @Transactional(readOnly = true)
+    public CategoryResponse getCategoryById(
+            Long id
+    ) {
 
         Category category =
                 categoryRepository.findById(id)
                         .orElseThrow(() ->
-                                new CategoryNotFoundException(
+                                new RuntimeException(
                                         "Category not found with id: " + id
                                 )
                         );
 
-        // 2. Convert entity to response
-
-        return convertToResponse(category);
+        return mapToResponse(category);
     }
 
 
@@ -113,48 +94,41 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public CategoryResponse updateCategory(
             Long id,
-            CategoryCreateRequest request) {
-
-        // 1. Find existing category
+            CategoryUpdateRequest request
+    ) {
 
         Category category =
                 categoryRepository.findById(id)
                         .orElseThrow(() ->
-                                new CategoryNotFoundException(
+                                new RuntimeException(
                                         "Category not found with id: " + id
                                 )
                         );
 
-        // 2. Check if another category already has this name
-
-        boolean nameAlreadyExists =
+        if (!category.getName()
+                .equalsIgnoreCase(request.getName())
+                &&
                 categoryRepository.existsByNameIgnoreCase(
                         request.getName()
-                );
+                )) {
 
-        if (nameAlreadyExists
-                && !category.getName().equalsIgnoreCase(request.getName())) {
-
-            throw new CategoryAlreadyExistsException(
-                    "Another category already exists with name: "
+            throw new RuntimeException(
+                    "Category already exists with name: "
                             + request.getName()
             );
         }
 
-        // 3. Update fields
-
         category.setName(request.getName());
-
         category.setDescription(request.getDescription());
 
-        // 4. Save updated category
+        if (request.getActive() != null) {
+            category.setActive(request.getActive());
+        }
 
         Category updatedCategory =
                 categoryRepository.save(category);
 
-        // 5. Convert to response
-
-        return convertToResponse(updatedCategory);
+        return mapToResponse(updatedCategory);
     }
 
 
@@ -163,21 +137,22 @@ public class CategoryServiceImpl implements CategoryService {
     // ============================================================
 
     @Override
-    public void deleteCategory(Long id) {
-
-        // 1. Check whether category exists
+    public void deleteCategory(
+            Long id
+    ) {
 
         Category category =
                 categoryRepository.findById(id)
                         .orElseThrow(() ->
-                                new CategoryNotFoundException(
+                                new RuntimeException(
                                         "Category not found with id: " + id
                                 )
                         );
 
-        // 2. Delete category
+        // Soft delete
+        category.setActive(false);
 
-        categoryRepository.delete(category);
+        categoryRepository.save(category);
     }
 
 
@@ -185,23 +160,17 @@ public class CategoryServiceImpl implements CategoryService {
     // ENTITY -> RESPONSE
     // ============================================================
 
-    private CategoryResponse convertToResponse(Category category) {
+    private CategoryResponse mapToResponse(
+            Category category
+    ) {
 
-        CategoryResponse response =
-                new CategoryResponse();
-
-        response.setId(category.getId());
-
-        response.setName(category.getName());
-
-        response.setDescription(category.getDescription());
-
-        response.setActive(category.getActive());
-
-        response.setCreatedAt(category.getCreatedAt());
-
-        response.setUpdatedAt(category.getUpdatedAt());
-
-        return response;
+        return CategoryResponse.builder()
+                .id(category.getId())
+                .name(category.getName())
+                .description(category.getDescription())
+                .active(category.getActive())
+                .createdAt(category.getCreatedAt())
+                .updatedAt(category.getUpdatedAt())
+                .build();
     }
 }
